# build-an-agent-nvidia-hackathon

./: -files  grep langgraph-cua-py  .gitignore  README.md  TODO.md  compose.yaml  postBuild.bash  pyproject.toml  quick_test.py  requirements.txt  secrets_management.ipynb  simple_test.py  test_agent.py  test_env.py  variables.env
.devx/: README.md  _sidebar.md  index.html  introduction_to_agents.md  jp_app_launcher.yaml  learn_the_code.md  next_steps.md  page_one.md  rag.md  report_generation_agent.md  research_agent.md  secrets.md  secrets_management.md  share_your_agent.md  workshop_overview.md
.devx.backdrop/: jp_app_launcher.yaml  legal.md
.project/: Containerfile  brev.Containerfile  brev.compose.yaml  compose.yaml  configpacks  edit.cache  runtime-flags.json  spec.yaml
code/: agent_client.ipynb  author_client.ipynb  build_an_agent_students.ipynb  intro_to_agents.ipynb  researcher_client.ipynb  secrets_management.ipynb
langgraph-cua-py/: .env.example  .gitignore  README.md  demo_browser.py  enhanced_document_editor.py  fixed_browser_cua.py  hybrid_document_editor.py  interactive_browser_cua.py  interactive_document_editor.py  pyproject.toml  real_browser_cua.py  simple_cua_example.py  simple_working_demo.py  test_nvidia_api.py  test_setup.py  working_browser_demo.py
langgraph-cua-py/langgraph_cua/: types.py
langgraph-cua-py/langgraph_cua/nodes/: __init__.py  take_computer_action.py
langgraph-cua-py/tests/unit/: test_import.py
langgraph_cua/: graph.py  utils.py
report-generation-agent/: .workshop_key  .workshop_secrets.json  README.md  caching.py  (+14 more)
(+81 files in other folders)
